--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,10 @@
     <script src="{{ url_for('static', filename='js/node_modules/umbrellajs/umbrella.js') }}"></script>
     <script src="{{ url_for('static', filename='js/node_modules/@andypf/json-viewer/dist/iife/index.js') }}"></script>
 
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components.css') }}">
 </head>
 <body>
     <div id="app"></div>
