--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -173,3 +173,9 @@
 #container .container_items .scroll_element:hover {
     background-color: var(--head-lighter-2);
 }
+
+.upper_note {
+    padding: 8px 6px;
+    background: var(--head-lighter-2);
+    border-bottom: 1px solid var(--status-border);
+}
