--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 
     <script src="{{ url_for('static', filename='js/node_modules/umbrellajs/umbrella.js') }}"></script>
     <script src="{{ url_for('static', filename='js/node_modules/@andypf/json-viewer/dist/iife/index.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/node_modules/dompurify/dist/purify.min.js') }}"></script>
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
