--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -54,44 +54,8 @@
 
 .horizontal_mini_tabs a.selected {
     background: var(--head-lighter-2);
-}
-
-#args .argument_listitem, .page-bottom {
-    padding: 8px 8px;
-}
-
-#args .argument_listitem {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border-bottom: 1px solid var(--head-lighter);
-}
-
-#args .argument_listitem.hidden .argument_value {
-    display: none;
-    filter: opacity(0.4);
-}
-
-#args .argument_listitem.hidden .desc {
-    display: none;
-}
-
-#args .argument_listitem:nth-child(odd) {
-    background: #f5f5f5;
-}
-
-#args .argument_listitem .argument_about .common_name {
-    cursor: pointer;
-}
-
-#args .argument_listitem .argument_about {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-}
-
-#args .argument_listitem .argument_about b {
-    display: inline-block;
+    outline: 1px solid var(--status-border);
+    z-index: 1;
 }
 
 #container .container_items {
@@ -178,4 +142,68 @@
     padding: 8px 6px;
     background: var(--head-lighter-2);
     border-bottom: 1px solid var(--status-border);
+}
+
+#args .argument_listitem, .page-bottom {
+    padding: 8px 8px;
+}
+
+#args .argument_listitem {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-bottom: 1px solid var(--head-lighter);
+}
+
+#args .argument_listitem.hidden .name_place {
+    filter: opacity(0.4);
+    user-select: none;
+}
+
+#args .argument_listitem.hidden .argument_value {
+    display: none;
+    filter: opacity(0.4);
+}
+
+#args .argument_listitem.hidden .desc {
+    display: none;
+}
+
+#args .argument_listitem:nth-child(odd) {
+    background: #f5f5f5;
+}
+
+#args .argument_listitem .argument_about {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+#args .argument_listitem .argument_about .name {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#args .argument_listitem .argument_about .name_place {
+    display: inline-block;
+}
+
+#args .argument_listitem .argument_about b {
+    display: inline-block;
+}
+
+.argument_listitem .argument_listitem_icon {
+    width: 15px;
+    height: 15px;
+    background: url(/assets/images/styles.png);
+    display: inline-block;
+    margin-bottom: -1px;
+    cursor: pointer;
+
+    background-position: -15px -124px;
+}
+
+.argument_listitem.hidden .argument_listitem_icon {
+    background-position: 0px -124px;
 }
