--- a/assets/css/page/navigation.css
+++ b/assets/css/page/navigation.css
@@ -3,11 +3,15 @@
     border-top: 1px solid var(--text);
     border-bottom: 1px solid var(--status-border);
     color: var(--status-color);
-    height: 40px;
+    height: 42px;
     user-select: none;
-
     display: flex;
     padding: 0px 41px;
+
+    width: 100%;
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 0;
 }
 
 #status-bar .tab {
@@ -56,6 +60,15 @@
     margin: 0px 40px;
     display: flex;
     flex-direction: row;
+
+    padding-top: 42px;
+}
+
+@media (width <= 1000px) {
+    #container {
+        flex-direction: column;
+        gap: 5px;
+    }
 }
 
 .page-head {
@@ -74,6 +87,7 @@
 #sidebar {
     position: fixed;
     height: 100vh;
+    z-index: 2;
 }
 
 #sidebar.waiting_animation {
@@ -137,7 +151,7 @@
     background-position-y: -41px;
 }
 
-body.scrolled #sidebar #home {
+body.scrolled #sidebar #home, #sidebar #home:active {
     background-position-y: -82px;
 }
 
