--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,24 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/node_modules/dompurify/dist/purify.min.js') }}"></script>
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/page.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/components.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/messagebox.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/palette.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page/tags.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page/body.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page/input.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page/colors.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page/containers.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page/visual.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page/navigation.css') }}">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/argument.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/horizontal_mini_tabs.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/horizontal_sub_tabs.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/horizontal_tabs.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/messagebox.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/pagination.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/placeholder.css') }}">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/executable_list.css') }}">
 </head>
 <body>
     <div id="app"></div>
