--- a/assets/css/page/navigation.css
+++ b/assets/css/page/navigation.css
@@ -140,7 +140,7 @@
     display: block;
     width: 40px;
     height: 100%;
-    background: url("/assets/images/styles.png");
+    background: url("/static/images/styles.png");
     background-color: var(--border-color);
     border-right: 1px solid black;
     height: 41px;
