--- a/assets/css/palette.css
+++ b/assets/css/palette.css
@@ -4,6 +4,7 @@
     --head-2: #9f93b8;
     --head-lighter: #e3ddf2;
     --head-lighter-2: #f0ecfa;
+    --almost-bg: #f6f5f9;
     --status-border: #3e256f;
     --status-active: #9e6ffd;
     --border-color: #261842;
