--- a/assets/css/page/navigation.css
+++ b/assets/css/page/navigation.css
@@ -69,6 +69,10 @@
         flex-direction: column;
         gap: 5px;
     }
+
+    #container #page {
+        width: 100%;
+    }
 }
 
 .page-head {
