--- a/assets/css/components/argument.css
+++ b/assets/css/components/argument.css
@@ -9,6 +9,10 @@
     border-bottom: 1px solid var(--head-lighter);
 }
 
+.argument_listitem:last-of-type {
+    border-bottom: unset;
+}
+
 .argument_listitem.hidden .name_place {
     filter: opacity(0.4);
     user-select: none;
@@ -23,7 +27,7 @@
     display: none;
 }
 
-.argument_listitem:nth-child(odd) {
+.arguments_list_colourful .argument_listitem:nth-child(odd) {
     background: #f5f5f5;
 }
 
