--- a/assets/css/page/navigation.css
+++ b/assets/css/page/navigation.css
@@ -56,7 +56,7 @@
 }
 
 #container {
-    min-height: 500px;
+    /*min-height: 500px;*/
     margin: 0px 40px;
     display: flex;
     flex-direction: row;
@@ -83,7 +83,7 @@
     padding: 10px 8px;
 }
 
-.page-bottom #exec {
+.page-bottom .wide_button {
     height: 40px;
     width: 100%;
 }
