--- a/assets/css/components/horizontal_sub_tabs.css
+++ b/assets/css/components/horizontal_sub_tabs.css
@@ -6,7 +6,7 @@
 }
 
 .horizontal_sub_tabs a {
-    padding: 5px 11px;
+    padding: 4px 11px;
     cursor: pointer;
     user-select: none;
 }
@@ -18,4 +18,5 @@
 .horizontal_sub_tabs a.selected {
     background: var(--head-2);
     color: var(--back);
+    outline: 1px solid var(--status-color);
 }
