--- a/assets/css/page/input.css
+++ b/assets/css/page/input.css
@@ -4,6 +4,7 @@ input[type="number"] {
     width: 100%;
     padding: 5px 10px;
     box-sizing: border-box;
+    font-size: 14px;
 }
 
 input[type='radio'] {
