--- a/assets/css/page/input.css
+++ b/assets/css/page/input.css
@@ -50,3 +50,8 @@ input[type='button'].active {
     width: fit-content;
     display: inline-block;
 }
+
+.unclickable {
+    pointer-events: none;
+    filter: opacity(0.5);
+}
